Overhauled Asset system